# Coinsec-Backend

./: .gitignore  README.md  pom.xml  pyproject.toml
SQL/: init_db.sql
app/: main.py
app/core/: config.py
app/crud/: __init__.py  category.py  keyword.py  record.py  user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  category.py  keyword.py  record.py  user.py
app/utils/nlp/: __init__.py  accounting_info_parser.py
src/main/java/com/coinsec/backend/: CodeGenerator.java  CoinsecBackendApplication.java
src/main/java/com/coinsec/backend/auth/controller/: UsersController.java
src/main/java/com/coinsec/backend/auth/entity/: UsersEntity.java
src/main/java/com/coinsec/backend/auth/mapper/: UsersMapper.java
src/main/java/com/coinsec/backend/auth/service/: UsersService.java
src/main/java/com/coinsec/backend/auth/service/impl/: UsersServiceImpl.java
src/main/java/com/coinsec/backend/config/: SaTokenConfigure.java
src/main/resources/: application-dev.yaml  application-prod.yaml  application.yaml  logback-spring.xml
src/main/resources/xml/: UsersXml.xml
src/test/java/com/coinsec/backend/: CoinsecBackendApplicationTests.java
tests/crud/: test_category.py  test_keyword.py  test_record.py  test_user.py
tests/nlp/: test_accounting_info_parser.py
